--- a/check.ipynb
+++ b/check.ipynb
@@ -2,18 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "#params: 123,479,719\n",
-      "torch.Size([1, 4, 224, 224])\n",
-      "torch.Size([1, 4, 224, 224])\n",
-      "torch.Size([1, 4, 224, 224])\n",
-      "torch.Size([1, 4, 224, 224])\n"
+      "#params: 105,276,356\n",
+      "torch.Size([4, 224, 224])\n"
      ]
     }
    ],
@@ -21,6 +18,7 @@
     "## TransCASCADE\n",
     "import torch\n",
     "from lib.networks import TransCASCADE\n",
+    "from lib.cnn_vit_backbone import TransUnet\n",
     "from lib.cnn_vit_backbone import CONFIGS as CONFIGS_ViT_seg\n",
     "\n",
     "class args:\n",
@@ -33,28 +31,43 @@
     "config_vit = CONFIGS_ViT_seg[args.vit_name]\n",
     "config_vit.n_classes = args.num_classes\n",
     "config_vit.n_skip = args.n_skip\n",
+    "config_vit.img_size = args.img_size\n",
+    "config_vit.encoderType = \"normal\"\n",
     "if args.vit_name.find('R50') != -1:\n",
     "    config_vit.patches.grid = (int(args.img_size / args.vit_patches_size), int(args.img_size / args.vit_patches_size))\n",
-    "net = TransCASCADE(\n",
-    "    config_vit, \n",
-    "    img_size=args.img_size, \n",
-    "    num_classes=config_vit.n_classes\n",
+    "net = TransUnet(\n",
+    "    config_vit\n",
     ").cuda() # model initialization\n",
     "print('#params: {:,}'.format(sum([p.data.nelement() for p in net.parameters()])))\n",
     "\n",
     "inputs = torch.randn((1,1,224,224)).cuda()\n",
     "outputs = net(inputs)\n",
     "\n",
+    "if isinstance(outputs, )\n",
     "for out in outputs:\n",
     "    print(out.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = (1,)\n",
+    "if isinstance(x, (list, tuple)):\n",
+    "    print(\"True\")\n",
+    "else:\n",
+    "    print(\"False\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -1892,7 +1905,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "torch",
    "language": "python",
    "name": "python3"
   },
@@ -1906,12 +1919,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "d4d1e4263499bec80672ea0156c357c1ee493ec2b1c70f0acce89fc37c4a6abe"
+    "hash": "65fe116ec29312474b580f4ecbad52a94f46ea3a142b15e85ff8e68848a207e7"
    }
   }
  },
